--- a/camera.css
+++ b/camera.css
@@ -428,7 +428,7 @@
 }
 .camera_caption > div {
 	background: #000;
-	background: rgba(0, 0, 0, 0.8);
+	    background: linear-gradient(#1cb5e0, #000046);
 }
 .camera_wrap .camera_pag .camera_pag_ul li {
 	background: #b7b7b7;
